--- a/index.html
+++ b/index.html
@@ -13,39 +13,38 @@
 </head>
 
 <body>
-  <html>
- <body>
+
   <div class="container text-center">
+    <p></p>  
    <a class ="btn btn-primary" id="turnX">Turn X</a> 
    <a class ="btn btn-secondary" id="turnO">Turn O</a>
-   
+   <p></p>  
    
    <div class="row">
     <div class="col-md-6">
-     <a class= " btn btn-primary tic" id="0">#</a>
-     <a class= " btn btn-primary tic" id="1">#</a>
-     <a class= " btn btn-primary tic" id="2">#</a>
+     <a class= " btn btn-medium tic" id="0"></a>
+     <a class= " btn btn-medium tic" id="1"></a>
+     <a class= " btn btn-medium tic" id="2"></a>
     </div>
     </div>
    
     <div class="row">
       <div class="col-md-6">
-     <a class= " btn btn-primary tic" id="3">#</a>
-     <a class= " btn btn-primary tic" id="4">#</a>
-     <a class= " btn btn-primary tic" id="5">#</a>
+     <a class= " btn btn-medium tic" id="3"></a>
+     <a class= " btn btn-medium tic" id="4"></a>
+     <a class= " btn btn-medium tic" id="5"></a>
      </div>
      </div>
      <div class="row">
       <div class="col-md-6">
-     <a class= " btn btn-primary tic" id="6">#</a>
-     <a class= " btn btn-primary tic" id="7">#</a>
-     <a class= " btn btn-primary tic" id="8">#</a>
+     <a class= " btn btn-medium tic" id="6"></a>
+     <a class= " btn btn-medium tic" id="7"></a>
+     <a class= " btn btn-medium tic" id="8"></a>
    </div>
      </div>     
     </div> 
   </div>
- </body<
-</html>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 
     <script  src="js/index.js"></script>
