--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -47,7 +47,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 
-    <script  src="js/index.js"></script>
+    <script  src="index.js"></script>
 
 </body>
 </html>
