--- a/index.html
+++ b/index.html
@@ -15,31 +15,42 @@
 <body>
 
   <div class="container text-center">
-    <p></p>  
+    <div>
+     <p></p>  
+   <h3> User vs. Computer Tic-Tac-Toe </h3>
+   <p></p><h4>
+  Rules: <p></p>
+    1. Select whether "X" or "O"<p></p>
+    2. Click on a box below to start <p></p>
+    3. Player and Computer will alternate turns  <p></p>
+    4. Objective is to line up three-in-a-row
+   </div>
+  
+    <div class="row"><center>
    <a class ="btn btn-primary" id="turnX">Turn X</a> 
    <a class ="btn btn-secondary" id="turnO">Turn O</a>
-   <p></p>  
+     <p></p></div>
+         <div class="row"><center>
    
-   <div class="row">
-    <div class="col-md-6">
-     <a class= " btn btn-medium tic" id="0"></a>
-     <a class= " btn btn-medium tic" id="1"></a>
-     <a class= " btn btn-medium tic" id="2"></a>
+    <div class="col-md-12">
+     <a class= " btn btn-medium tic" id="0">#</a>
+     <a class= " btn btn-medium tic" id="1">#</a>
+     <a class= " btn btn-medium tic" id="2">#</a>
     </div>
-    </div>
+   
    
     <div class="row">
-      <div class="col-md-6">
-     <a class= " btn btn-medium tic" id="3"></a>
-     <a class= " btn btn-medium tic" id="4"></a>
-     <a class= " btn btn-medium tic" id="5"></a>
+      <div class="col-md-12">
+     <a class= " btn btn-medium tic" id="3">#</a>
+     <a class= " btn btn-medium tic" id="4">#</a>
+     <a class= " btn btn-medium tic" id="5">#</a>
      </div>
      </div>
      <div class="row">
-      <div class="col-md-6">
-     <a class= " btn btn-medium tic" id="6"></a>
-     <a class= " btn btn-medium tic" id="7"></a>
-     <a class= " btn btn-medium tic" id="8"></a>
+      <div class="col-md-12">
+     <a class= " btn btn-medium tic" id="6">#</a>
+     <a class= " btn btn-medium tic" id="7">#</a>
+     <a class= " btn btn-medium tic" id="8">#</a>
    </div>
      </div>     
     </div> 
